# yellow-sleeper

./: .gitignore  .yellow-sleeper.yaml.example  DECISIONS.md  HANDOFF.md  Mifflin Doty Dynasty MCP Server PRD v0_4_4 _Polished Canonical_.md  PLAN.md  PRD.md  README.md  STATUS.md  TECHNICAL_SPEC.md  TOOL_CONTRACTS.md  goal.md  pyproject.toml
.ruvector/: intelligence.json
.serena/: project.yml
plans/: review-followup-round-2-residual.md  review-followup-type-invariants-and-pipeline-tests.md
src/yellow_sleeper/: __init__.py  __main__.py  config.py  runtime.py  server.py
src/yellow_sleeper/analyze/: __init__.py  pipelines.py  roster.py  value.py
src/yellow_sleeper/clients/: __init__.py  fantasycalc.py  http.py  sleeper.py
src/yellow_sleeper/models/: __init__.py  bpa.py  draft.py  envelope.py  health.py  picks.py  refresh.py  roster.py  shared.py  trade.py  values.py
src/yellow_sleeper/obs/: __init__.py  caps.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: test_fantasycalc_client.py  test_sleeper_client.py
tests/smoke/: test_smoke_questions.py
tests/unit/: test_cache.py  test_caps.py  test_config.py  test_envelope_validators.py  test_logging.py  test_model_invariants.py  test_models_contract.py  test_pick_inventory.py  test_pick_parser.py  test_pipelines_analyze_trade.py  test_pipelines_health_check.py  test_pipelines_league_power_map.py  test_pipelines_refresh_cache.py  test_pipelines_whats_on_the_clock.py  test_player_resolver.py  test_roster_resolver.py  test_stale_value_status.py  test_tool_contract_signatures.py
(+28 files in other folders)
