[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yellow-sleeper"
version = "0.1.0"
description = "Local MCP server for the Sleeper fantasy football league."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "ruamel.yaml>=0.18",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
yellow-sleeper = "yellow_sleeper.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yellow_sleeper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]
